feat : Add message server service logics and dtos with test